# spheremap

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: params.yaml
examples/: download_dataset.sh  example.launch  rviz.rviz
include/search_planning/: mapper.h  mapping_nodelet.h  mapping_structures.h  pcl_map.h  spheremap.h  utility_functions.h
include/spheremap_server/: mapper.h  mapping_nodelet.h  mapping_structures.h  pcl_map.h  spheremap.h  utility_functions.h
launch/: spheremap_server.launch  uav.launch
msg/: SegmapMsg.msg
rviz/: uav1.rviz
src/: mapper.cpp  mapping_nodelet.cpp  mapping_structures.cpp  pcl_map.cpp  spheremap.cpp  utility_functions.cpp
srv/: GetSphereMapPathSrv.srv  SetSafetyPlanningParamsSrv.srv
