<?xml version="1.0"?>
<package format="2">

  <name>search_planning</name>
  <version>0.0.1</version>
  <description>maps exploration</description>

  <maintainer email="musilto8@fel.cvut.cz">Tomas Musil</maintainer>

  <license>MIT</license>

  <author email="musilto8@fel.cvut.cz">Tomas Musil</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>darpa_mrs_msgs</depend>
  <depend>darpa_msgs</depend>
  <depend>darpa_planning_lib</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>mrs_lib</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
