<?xml version="1.0"?>
<package format="2">

  <name>spheremap_server</name>
  <version>0.0.1</version>
  <description>SphereMap is a multi-layer dynamic map built online on-board a UAV. It allows weighing path length and distance from obstacles along the path for safety-aware planning, while also finding paths faster than a conventional occupancy grid</description>

  <maintainer email="musilto8@fel.cvut.cz">Tomas Musil</maintainer>

  <license>MIT</license>

  <author email="musilto8@fel.cvut.cz">Tomas Musil</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
